syntax = "proto3";

package vuong.app.v1.discord;
option java_package = "com.vuong.app.v1.discord";
option java_multiple_files = true;
option java_outer_classname = "ProfileProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
import "operator.proto";

message GrpcCreateProfileRequest {
  string profile_id = 1;
  string name = 2;
  string avt_url = 3;
}

message GrpcCreateProfileResponse {
  int32 result = 1;
}

service ProfileService {
  rpc createProfile(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
}